--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "highlight.js": "^11.7.0",
     "markdown-it": "^13.0.1"
+  },
+  "bin": {
+    "publish": "./publish.js"
   }
 }
